--- a/파이썬시작하기_001-010.ipynb
+++ b/파이썬시작하기_001-010.ipynb
@@ -86,7 +86,190 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "004 print 기초\n",
+    "화면에 C:\\Windows를 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Windows\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('C:\\\\Windows')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "005 print 탭과 줄바꿈\n",
+    "다음 코드를 실행해보고 \\t와 \\n의 역할을 설명해보세요.\n",
+    "\n",
+    "#### print(\"안녕하세요.\\n만나서\\t\\t반갑습니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요.\n",
+      "만나서\t\t반갑습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"안녕하세요.\\n만나서\\t\\t반갑습니다.\") # \\n은 줄바꿈  \\t\\t 탭 공백 넣기\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "006 print 여러 데이터 출력\n",
+    "print 함수에 두 개의 단어를 입력한 예제입니다. 아래 코드의 출력 결과를 예상해봅시다.\n",
+    "\n",
+    "#### print (\"오늘은\", \"일요일\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오늘은 일요일\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"오늘은\", \"일요일\") # 오늘은 (띄어쓰기) 일요일"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "007 print 기초\n",
+    "print() 함수를 사용하여 다음과 같이 출력하세요.\n",
+    "\n",
+    "#### naver;kakao;sk;samsung"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naver;kakao;sk;samsung\n",
+      "naver;kakao;samsung\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('naver;kakao;sk;samsung')\n",
+    "print(\"naver\", \"kakao\", \"samsung\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "008 print 기초\n",
+    "print() 함수를 사용하여 다음과 같이 출력하세요.\n",
+    "\n",
+    "#### naver/kakao/sk/samsung"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "naver/kakao/sk/samsung\n"
+     ]
+    }
+   ],
+   "source": [
+    "company = ['naver','kakao','sk','samsung']\n",
+    "print('/'.join(company))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "009 print 줄바꿈\n",
+    "다음 코드를 수정하여 줄바꿈이 없이 출력하세요. (힌트: end='') print 함수는 두 번 사용합니다. 세미콜론 (;)은 한줄에 여러 개의 명령을 작성하기 위해 사용합니다.\n",
+    "#### print(\"first\");print(\"second\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "firstsecond\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('first', end = '');print('second');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "010 연산 결과 출력\n",
+    "5/3의 결과를 화면에 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5/3)"
+   ]
   }
  ],
  "metadata": {
